clicking buttons now does stuff

--- a/javascript-calculator/index.html
+++ b/javascript-calculator/index.html
@@ -17,78 +17,78 @@
       <div class="row">
         <div class="title text-center"><h1>My jQuery Calculator</h1></div>
         <div id="calculator" class="col-xs-12">
-          <div id="output" class=""></div>
+          <div id="display"><input id="calculate" class="form-control" /></div>
           <table class="buttons text-center">
             <thead></thead>
             <tbody>
               <tr id="row-1">
                 <td id="all-clear">
-                  <btn class="btn btn-primary">AC</btn>
+                  <button id="AC" class="btn btn-primary">AC</button>
                 </td>
                 <td id="clear-entry">
-                  <btn class="btn btn-primary">CE</btn>
+                  <button id="CE" class="btn btn-primary">CE</button>
                 </td>
                 <td id="percent">
-                  <btn class="btn btn-primary">%</btn>
+                  <button id="%" class="btn btn-primary">%</button>
                 </td>
                 <td id="divide">
-                  <btn class="btn btn-primary">/</btn>
+                  <button id="/" class="btn btn-primary">/</button>
                 </td>
               </tr>
               <tr id="row-2">
-                <td id="seven">
-                  <btn class="btn btn-primary">7</btn>
+                <td>
+                  <button id="7" class="btn btn-primary">7</button>
                 </td>
                 <td id="eight">
-                  <btn class="btn btn-primary">8</btn>
+                  <button id="8" class="btn btn-primary">8</button>
                 </td>
                 <td id="nine">
-                  <btn class="btn btn-primary">9</btn>
+                  <button id="9" class="btn btn-primary">9</button>
                 </td>
                 <td id="multiply">
-                  <btn class="btn btn-primary">*</btn>
+                  <button id="*" class="btn btn-primary">*</button>
                 </td>
               </tr>
               <tr id="row-3">
                 <td id="four">
-                  <btn class="btn btn-primary">4</btn>
+                  <button id="4" class="btn btn-primary">4</button>
                 </td>
                 <td id="five">
-                  <btn class="btn btn-primary">5</btn>
+                  <button id="5" class="btn btn-primary">5</button>
                 </td>
                 <td id="six">
-                  <btn class="btn btn-primary">6</btn>
+                  <button id="6" class="btn btn-primary">6</button>
                 </td>
                 <td id="subtract">
-                  <btn class="btn btn-primary">7</btn>
+                  <button id="" class="btn btn-primary">-</button>
                 </td>
               </tr>
               <tr id="row-4">
                 <td id="one">
-                  <btn class="btn btn-primary">1</btn>
+                  <button id="1" class="btn btn-primary">1</button>
                 </td>
                 <td id="two">
-                  <btn class="btn btn-primary">2</btn>
+                  <button id="2" class="btn btn-primary">2</button>
                 </td>
                 <td id="three">
-                  <btn class="btn btn-primary">3</btn>
+                  <button id="3" class="btn btn-primary">3</button>
                 </td>
                 <td id="add">
-                  <btn class="btn btn-primary">+</btn>
+                  <button id="+" class="btn btn-primary">+</button>
                 </td>
               </tr>
               <tr id="row-5">
                 <td id="decimal">
-                  <btn class="btn btn-primary">.</btn>
+                  <button id="." class="btn btn-primary">.</button>
                 </td>
                 <td id="zero">
-                  <btn class="btn btn-primary">0</btn>
+                  <button id="0" class="btn btn-primary">0</button>
                 </td>
                 <td id="answer">
-                  <btn class="btn btn-primary">Ans</btn>
+                  <button id="Ans" class="btn btn-primary">Ans</button>
                 </td>
                 <td id="equals">
-                  <btn class="btn btn-primary">=</btn>
+                  <button id="=" class="btn btn-primary">=</button>
                 </td>
               </tr>
             </tbody>
