basic functionality is working

--- a/javascript-calculator/index.html
+++ b/javascript-calculator/index.html
@@ -60,7 +60,7 @@
                   <button id="6" class="btn btn-primary">6</button>
                 </td>
                 <td id="subtract">
-                  <button id="" class="btn btn-primary">-</button>
+                  <button id="-" class="btn btn-primary">-</button>
                 </td>
               </tr>
               <tr id="row-4">
