completed jquery calculator, for now

--- a/javascript-calculator/index.html
+++ b/javascript-calculator/index.html
@@ -17,7 +17,7 @@
       <div class="row">
         <div class="title text-center"><h1>My jQuery Calculator</h1></div>
         <div id="calculator" class="col-xs-12">
-          <div id="display"><input id="calculate" class="form-control" /></div>
+          <div id="display"><input id="calculate" class="form-control" placeholder="You can use your keyboard, too!"/></div>
           <table class="buttons text-center">
             <thead></thead>
             <tbody>
