--- a/pomodoro/index.html
+++ b/pomodoro/index.html
@@ -22,35 +22,35 @@
           <tr id="digits">
             <td id="0" class="digit">
               <div class="row" id="row-1"><div class="shape top 0 2 3 5 6 7 8 9"></div></div>
-              <div class="row" id="row-2"><div class="shape left 0 1 4 5 6 8 9"></div><div class="space"></div><div class="shape right 0 2 3 4 7 8 9"></div></div>
+              <div class="row" id="row-2"><div class="shape left 0 4 5 6 8 9"></div><div class="space"></div><div class="shape right 0 1 2 3 4 7 8 9"></div></div>
               <div class="row" id="row-3"><div class="shape bottom 2 3 4 5 6 8 9"></div></div>
               <div class="row" id="row-4"><div class="shape top 2 3 4 5 6 8 9"></div></div>
-              <div class="row" id="row-5"><div class="shape left 0 1 2 6 8"></div><div class="space"></div><div class="shape right 0 3 4 5 6 7 8 9"></div></div>
+              <div class="row" id="row-5"><div class="shape left 0 2 6 8"></div><div class="space"></div><div class="shape right 0 1 3 4 5 6 7 8 9"></div></div>
               <div class="row" id="row-6"><div class="shape bottom 0 2 3 5 6 8 9"></div></div>
             </td>
             <td id="1" class="digit">
               <div class="row" id="row-1"><div class="shape top 0 2 3 5 6 7 8 9"></div></div>
-              <div class="row" id="row-2"><div class="shape left 0 1 4 5 6 8 9"></div><div class="space"></div><div class="shape right 0 2 3 4 7 8 9"></div></div>
+              <div class="row" id="row-2"><div class="shape left 0 4 5 6 8 9"></div><div class="space"></div><div class="shape right 0 1 2 3 4 7 8 9"></div></div>
               <div class="row" id="row-3"><div class="shape bottom 2 3 4 5 6 8 9"></div></div>
               <div class="row" id="row-4"><div class="shape top 2 3 4 5 6 8 9"></div></div>
-              <div class="row" id="row-5"><div class="shape left 0 1 2 6 8"></div><div class="space"></div><div class="shape right 0 3 4 5 6 7 8 9"></div></div>
+              <div class="row" id="row-5"><div class="shape left 0 2 6 8"></div><div class="space"></div><div class="shape right 0 1 3 4 5 6 7 8 9"></div></div>
               <div class="row" id="row-6"><div class="shape bottom 0 2 3 5 6 8 9"></div></div>
             </td>
             <td class="colon">:</td>
             <td id="2" class="digit">
               <div class="row" id="row-1"><div class="shape top 0 2 3 5 6 7 8 9"></div></div>
-              <div class="row" id="row-2"><div class="shape left 0 1 4 5 6 8 9"></div><div class="space"></div><div class="shape right 0 2 3 4 7 8 9"></div></div>
+              <div class="row" id="row-2"><div class="shape left 0 4 5 6 8 9"></div><div class="space"></div><div class="shape right 0 1 2 3 4 7 8 9"></div></div>
               <div class="row" id="row-3"><div class="shape bottom 2 3 4 5 6 8 9"></div></div>
               <div class="row" id="row-4"><div class="shape top 2 3 4 5 6 8 9"></div></div>
-              <div class="row" id="row-5"><div class="shape left 0 1 2 6 8"></div><div class="space"></div><div class="shape right 0 3 4 5 6 7 8 9"></div></div>
+              <div class="row" id="row-5"><div class="shape left 0 2 6 8"></div><div class="space"></div><div class="shape right 0 1 3 4 5 6 7 8 9"></div></div>
               <div class="row" id="row-6"><div class="shape bottom 0 2 3 5 6 8 9"></div></div>
             </td>
             <td id="3" class="digit">
               <div class="row" id="row-1"><div class="shape top 0 2 3 5 6 7 8 9"></div></div>
-              <div class="row" id="row-2"><div class="shape left 0 1 4 5 6 8 9"></div><div class="space"></div><div class="shape right 0 2 3 4 7 8 9"></div></div>
+              <div class="row" id="row-2"><div class="shape left 0 4 5 6 8 9"></div><div class="space"></div><div class="shape right 0 1 2 3 4 7 8 9"></div></div>
               <div class="row" id="row-3"><div class="shape bottom 2 3 4 5 6 8 9"></div></div>
               <div class="row" id="row-4"><div class="shape top 2 3 4 5 6 8 9"></div></div>
-              <div class="row" id="row-5"><div class="shape left 0 1 2 6 8"></div><div class="space"></div><div class="shape right 0 3 4 5 6 7 8 9"></div></div>
+              <div class="row" id="row-5"><div class="shape left 0 2 6 8"></div><div class="space"></div><div class="shape right 0 1 3 4 5 6 7 8 9"></div></div>
               <div class="row" id="row-6"><div class="shape bottom 0 2 3 5 6 8 9"></div></div>
             </td>
           </tr>
@@ -93,7 +93,7 @@
           </div><!-- .set .row -->
 
           <button id="start" class="btn btn-primary">Start</button>
-          <button id="pause" class="btn btn-primary"><i class="fa fa-pause" aria-hidden="true"></i></button>
+          <button id="pause" class="btn btn-primary pause"><i class="fa fa-pause" aria-hidden="true"></i></button>
           <button id="reset" class="btn btn-primary">Reset</button>
         </div>
       </div> <!-- .row -->
