setting up layout for tic tac toe

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -15,6 +15,30 @@
   <body>
     <div class="container-fluid">
       <div class="row">
+        <div class="title text-center">
+          <h1>My Tic Tac Toe Game</h1>
+        </div>
+      </div> <!-- .row -->
+      <div class="row">
+        <div class="col-md-2 col-md-offset-5">
+          <div class="fluid-container tictactoe">
+            <div id="row-1" class="row">
+              <div id="0" class="col-xs-4 square"></div>
+              <div id="1" class="col-xs-4 square"></div>
+              <div id="2" class="col-xs-4 square"></div>
+            </div> <!-- .row -->
+            <div id="row-2" class="row">
+              <div id="3" class="col-xs-4 square"></div>
+              <div id="4" class="col-xs-4 square"></div>
+              <div id="5" class="col-xs-4 square"></div>
+            </div> <!-- .row -->
+            <div id="row-3" class="row">
+              <div id="6" class="col-xs-4 square"></div>
+              <div id="7" class="col-xs-4 square"></div>
+              <div id="8" class="col-xs-4 square"></div>
+            </div> <!-- .row -->
+          </div>
+        </div>
       </div> <!-- .row -->
     </div><!-- .container-fluid -->
   </body>
