--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -7,6 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="scripts.js"></script>
+
   </head>
 
   <header>
@@ -19,30 +20,38 @@
           <h1>My Tic Tac Toe Game</h1>
         </div>
       </div> <!-- .row -->
-      <div class="row">
-        <div class="col-md-2 col-md-offset-5">
-          <div class="fluid-container tictactoe">
-            <div id="row-1" class="row">
-              <div id="0" class="col-xs-4 square"></div>
-              <div id="1" class="col-xs-4 square"></div>
-              <div id="2" class="col-xs-4 square"></div>
-            </div> <!-- .row -->
-            <div id="row-2" class="row">
-              <div id="3" class="col-xs-4 square"></div>
-              <div id="4" class="col-xs-4 square"></div>
-              <div id="5" class="col-xs-4 square"></div>
-            </div> <!-- .row -->
-            <div id="row-3" class="row">
-              <div id="6" class="col-xs-4 square"></div>
-              <div id="7" class="col-xs-4 square"></div>
-              <div id="8" class="col-xs-4 square"></div>
-            </div> <!-- .row -->
-          </div>
+        <div id="game" class="row game">
+
+          <canvas id="tictactoe" width="320" height="320"></canvas>
+
         </div>
-      </div> <!-- .row -->
     </div><!-- .container-fluid -->
   </body>
 
   <footer>
   </footer>
 </html>
+
+
+
+<!--
+  <div class="col-md-2 col-md-offset-5">
+    <div class="fluid-container tictactoe">
+      <div id="row-1" class="row">
+        <div id="0" class="col-xs-4 square"></div>
+        <div id="1" class="col-xs-4 square"></div>
+        <div id="2" class="col-xs-4 square"></div>
+      </div>
+      <div id="row-2" class="row">
+        <div id="3" class="col-xs-4 square"></div>
+        <div id="4" class="col-xs-4 square"></div>
+        <div id="5" class="col-xs-4 square"></div>
+      </div>
+      <div id="row-3" class="row">
+        <div id="6" class="col-xs-4 square"></div>
+        <div id="7" class="col-xs-4 square"></div>
+        <div id="8" class="col-xs-4 square"></div>
+      </div>
+    </div>
+  </div>
+-->
